Suggestions from Moji

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class="header-content">
                         <div class="header-content-inner">
 			  <h2>
-			  I'm currently a junior professor for
+			  My name is Tony, and I'm currently a junior professor for
 			  model-based software development at the
 			  computer science department of Paderborn University, Germany.
 			  </h2>
@@ -234,14 +234,14 @@ for this endeavour.
 <br />
 
 <li>
-Influenced by <a href="http://www.es.tu-darmstadt.de/es/team/gergely-varro/">Gergeley Varró</a> and his work on <i>incremental graph pattern matching</i>, I have started exploring the potential of using an incremental graph pattern matcher as an underlying engine for diverse consistency management tasks.
-This is currently joint work performed in close collaboration with my former office mate <a href="http://www.es.tu-darmstadt.de/es/team/erhan-leblebici/">Erhan Leblebici</a> and my doctor father <a href="http://www.es.tu-darmstadt.de/es/team/andy-schuerr/">Andy Schürr</a>.
+Inspired by recent advancements in the area of <i>incremental graph pattern matching</i>, I have started exploring the potential of using an incremental graph pattern matcher as an underlying engine for diverse consistency management tasks.
+This is currently joint work performed in close collaboration with my former office mates <a href="http://www.es.tu-darmstadt.de/es/team/erhan-leblebici/">Erhan Leblebici</a>, <a href="http://www.es.tu-darmstadt.de/es/team/gergely-varro/">Gergeley Varró</a>, and my doctor father <a href="http://www.es.tu-darmstadt.de/es/team/andy-schuerr/">Andy Schürr</a>.
 </li>
 <br />
 
 <li>
 Inspired by work in the research area of <i>method engineering</i> performed by my current colleagues in the research group of <a href="https://cs.uni-paderborn.de/dbis/personal/arbeitsgruppe/mitarbeiter/prof-gregor-engels/visitenkarte/">Gregor Engels</a>, I have started revisiting all my previous work and old projects on synchronisation scenarios and other consistency management applications.
-My hope is that approaches in method engineering can provide a promising means of extracting and packaging reusable knowledge and experience from these past projects in the form of reusable <i>method fragments</i> and <i>method patterns</i>.  
+My goal is to apply method engineering as a promising means of extracting and packaging reusable knowledge and experience from these past projects in the form of reusable <i>method fragments</i> and <i>method patterns</i>.  
 </li>
 
 </ul>
@@ -279,7 +279,7 @@ btn-xl page-scroll">My Profile</a>
 
 		  </p>
 		  <a href="#service" class="btn btn-profile
-		  btn-xl page-scroll">Academic Service</a>
+		  btn-xl page-scroll">Service</a>
                 </div>
             </div>
         </div>
