--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class="header-content">
                         <div class="header-content-inner">
 			  <h2>
-			  My name is Tony, and I'm currently a junior professor for
+			  My name is Tony Anjorin, and I'm currently a junior professor for
 			  model-based software development at the
 			  computer science department of Paderborn University, Germany.
 			  </h2>
