--- a/index.html
+++ b/index.html
@@ -290,11 +290,124 @@ btn-xl page-scroll">My Profile</a>
             <div class="row">
                  <div class="col-md-8 col-md-offset-2">
                     
-		  <p>
-
+		   <h3>Workshops, Conferences, Seminars, and Journals</h3>
+		   <p>
+		   <ul>
+		     <li>
+		     20th International Conference on Model Driven Engineering Languages and Systems (<a href="https://www.cs.utexas.edu/models2017/home">MoDELS 2017</a>)
+		     <br />
+		     <small>[ Programme committee member of the foundations track and of the posters track ]</small>
+		     </li>
+		     <br />
+		     <li>
+		     13th European Conference on Modelling Foundations and Applications (<a href="http://ecmfaconference.wixsite.com/ecmfa2017">ECMFA 2017</a>)
+		     <br />
+		     <small>[ Chair for the foundations track ]</small>
+		     </li>
+		     <br />
+		     <li>10th International Conference on Graph Transformation (<a href="https://sites.google.com/site/gratra2017/home">ICGT 2017</a>)
+		     <br />
+		     <small>[ Programme committee member ]</small>
+		     </li>
+		     <br />
+		     <li>
+		     6th International Workshop on Bidirectional Transformations (<a href="http://bx-community.wikidot.com/bx2017:home">BX 2017</a>)
+		     <br />
+		     <small>[ Programme committee member ]</small>
+		     </li>
+		     <br />
+		     <li>
+		     Fifth International Workshop on Bidirectional Transformations (<a href="http://bx-community.wikidot.com/bx2016:home">BX 2016</a>)
+		     <br />
+		     <small>[ Co-chair with Jeremy Gibbons ]</small>
+		     </li>
+		     <br />
+		     <li>
+		     <a href="http://bx-community.wikidot.com/bx-steering-committee">BX Steering Committee </a>
+		     <br />
+		     <small>[ Member since 2016; Chair since 2016]</small>
+		     </li>
+		     <br />
+		     <li>
+		     <a href="http://bx-community.wikidot.com/bx-advisory-board">BX Advisory Board</a>
+		     <br/>
+		     <small>[ Member since 2016] </small>
+		     </li>
+		     <br />
+		     <li>
+		     NII Shonan Meeting Seminar 091 (<a href="http://shonan.nii.ac.jp/seminar/091/">Bidirectional Transformations</a>)
+		     <br />
+		     <small>[ Co-organiser ]</small>
+		     </li>
+		     <br />
+		     <li>
+		     9th International Conference on Software Language Engineering (<a href="http://www.sleconf.org/2016/">SLE 2016</a>)
+		     <br />
+		     <small>[ Artifact reviewer ]</small>
+		     </li>
+		     <br />
+		     <li>
+		     <a href="https://www.journals.elsevier.com/journal-of-systems-and-software">Journal of Systems and Software</a>
+		     <br />
+		     <small>[ Reviewer in 2016 ]</small>
+		     </li>
+		     <br />
+		     <li>
+		     Journal of Software and Systems Modelling (<a href="http://www.sosym.org">SoSym </a>)
+		     <br />
+		     <small>[ Reviewer in 2016 ]</small>
+		     </li>
+		     <br />
+		    <li>
+		     4th International Workshop on Bidirectional Transformations (<a href="http://bx-community.wikidot.com/bx2015:home">BX 2015</a>)
+		     <br />
+		     <small>[ Programme committee member ]</small>
+		     </li>
+		     <br />
+		   </ul>  
 		   </p>
-                </div>
-            </div>
+
+		   <h3>Invited Talks and Lectures</h3>
+
+		   <p>
+		   <ul>
+		     <li>
+		     Summer School on Bidirectional Transformations (<a href="https://www.cs.ox.ac.uk/projects/tlcbx/ssbx/">SSBX</a>) held from 25th to 29th July, 2016 
+		     <br />
+		     <small>[ Lecturer ]</small>
+		     </li>
+		     <br />
+		     <li>
+		     24th International Workshop on Functional and (Constraint) Logic Programming (<a href="https://wflp2016.github.io">WFLP 2016</a>) 
+		     <br />
+		     <small>[ Invited Speaker ]</small>
+		     </li>
+		   </ul>
+		   </p>
+		   
+		   <h3>Miscellaneous (or just for fun)</h3>
+		    <p>
+		   <ul>
+		     <li>
+		    <a href="https://www.uni-paderborn.de/universitaet/fgi/girlsday/">Girls' Day 2017</a>
+		     <br />
+		     <small>[ I organised a lecture and workshop: "Programmieren mit Kästchen und Strichen – Einblick in das Informatikstudium" ]</small>
+		     </li>
+		     <br />
+		     <li>
+		     <a href="https://www.uni-paderborn.de/universitaet/fgi/herbst-uni/">Herbst-Uni 2016</a> 
+		     <br />
+		     <small>[ I organised a lecture and workshop: "Programmieren mit Kästchen und Strichen" ]</small>
+		     <br />
+		     <br />
+		     <p>
+		     <img class="img-responsive img-rounded" src="img/herbstuni_2016.jpg" alt="Herbst-Uni 2016, Uni Paderborn" width="460">
+		     </p>
+		     </li>
+		   </ul>
+		   </p>
+		 </div>
+	    </div>
         </div>
     </section>
 
