Added ref for pic

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@ btn-xl page-scroll">My Profile</a>
 		     <br />
 		     <br />
 		     <p>
-		     <img class="img-responsive img-rounded" src="img/herbstuni_2016.jpg" alt="Herbst-Uni 2016, Uni Paderborn" width="460">
+		     <img class="img-responsive img-rounded" src="img/herbstuni_2016.jpg" alt="Herbst-Uni 2016, Uni Paderborn" width="460"><h6>Photograph courtesy of Paderborn University, Herbst-Uni 2016.</h6>
 		     </p>
 		     </li>
 		   </ul>
