Added section on teaching experience and material

--- a/index.html
+++ b/index.html
@@ -274,9 +274,45 @@ btn-xl page-scroll">My Profile</a>
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    
-		  <p>
+		  <h3>Teaching:  Experience and Material</h3>
 
+		  <p>
+		  I enjoy teaching and take great joy in preparing engaging slides and great learning material.
+		  Here is a brief overview of courses that I have prepared and held in the past.
+		  Please contact me directly if you would like to have access to material that I have not yet (or cannot) make freely available online.
+		  </p>
+		 
+		  <p>
+		   <ul>
+		     <li>
+		     Model synchronisation tools are cool and fun to play with.  Such tools are also a nice way of showcasing bidirectional transformation (bx) languages as they make you realise how rich the solution space is and how easily a bad programmer could mess things up.
+		     To get students hooked on bx research and interested in the general area, a student of mine has recently built a fancy bx demonstrator called <i>demon-bx</i> (pronounced /demon-box/).  I have used this engaging tool as part of the exercise for a university course as well as for a Girls' Day workshop.  It is web-based (zero installation or setup) and is <a href="http://bxtransform.cs.upb.de:8080/Client/GUI.html">available</a> online.  
+		     </li>
+		     <br />
+		     <li>
+		     I established and, starting from the winter semester of 2016/17, have been holding the lecture <a href="https://cs.uni-paderborn.de/dbis/lehre/veranstaltungen/ws-201617/fundamentals-of-model-driven-engineering/news/">Fundamentals of Model-Driven Engineering (FMDE)</a> at Paderborn University.  This lecture provides a uniform formalisation of the most important MDE concepts based on graph transformation and basic category theory.
+		     My motivation for preparing this lecture from scratch was to make the rich and mature theory accessible to computer science students (or anyone that can program).  <i>Every</i> single definition and proof in the lecture is programmed in Java 8, providing a constructive and hands-on handle to otherwise very abstract and generic theoretical concepts and results.
+		    Please contact me for the slides and exercises.
+		     You can freely access the <a href="https://github.com/anthonyanjorin/fmde">code</a> hosted on GitHub.
+		     I would be honoured if anyone might be interested in adapting the material and holding a similar lecture based on FMDE.
+		     </li>
+		     <br />
+		     <li>
+		     The primary motivation for research on model-based techniques and technology is often attaining a substantial increase in the <i>quality</i> of developed software systems.
+		     This implies that establishing a common understanding of what exactly <i>software quality</i> means is certainly a good idea. 
+		     It has thus been my pleasure to have held the lecture <a href="https://cs.uni-paderborn.de/dbis/lehre/veranstaltungen/ss-2017/software-quality-assurance/news/">Software Quality Assurance (SQA)</a> at Paderborn University in the summer semester of 2016 and of 2017.
+		     After holding this lecture twice, updating and improving all slides and exercises in the process (contact me for access), I have handed this lecture back to <a href="https://cs.uni-paderborn.de/dbis/personal/arbeitsgruppe/mitarbeiter/prof-gregor-engels/visitenkarte/">Gregor Engels</a>.  
+		     </li>
+		     <br />
+		     <li>
+		     C++ is a rich and complex programming language that combines multiple paradigms and programming styles.
+		     Although I wouldn't suggest learning C++ as a first programming language, it certainly is relevant in practice and remains <i>the</i> language of choice in some important domains.
+		     It also provides a modern interface to the vast wealth of efficient C libraries when you need this.
+		     
+		     During my PhD at the Technische Universität Darmstadt, I took over and completely reengineered the introductory C++ course being held there.
+		     This course is still being held and updated today, and you can freely access the <a href="https://github.com/Echtzeitsysteme/tud-cppp/blob/master/lecture/cppp_lecture.pdf">available material</a> on GitHub.
+		     </li>
+		   </ul>
 		  </p>
 		  <a href="#service" class="btn btn-profile
 		  btn-xl page-scroll">Service</a>
