First complete version

--- a/index.html
+++ b/index.html
@@ -259,9 +259,67 @@ btn-xl page-scroll">My Profile</a>
         <div class="container">
             <div class="row">
                  <div class="col-md-8 col-md-offset-2">
-                    
+                    <h3>Profile</h3>
 		  <p>
-
+		   <ul>
+		     <li>
+		     <h4>[ Personal ]</h4>
+		     <ul>
+		       <li>
+		       I was born on the first of November, 1984 in Zaria, Nigeria.
+		       </li>
+		       <li>
+		       I am both german and nigerian by birth.
+		       </li>
+		       <li>
+		       I am married and currently have one child.
+		       </li>
+		     </ul>
+		     </li>
+		     <li>
+		     <h4>[ Work Experience ]</h4>
+		     <ul>
+		       <li>
+		       As from <b>April 2016</b> I have been a <b>junior professor</b> at Paderborn University, Germany.
+		       </li>
+		       <li>
+		       From <b>June 2015 to Febraury 2016</b> I was a <b>post-doc</b> at Chalmers | University of Gothenburg, Sweden.
+		       </li>
+		       <li>
+		       From <b>May 2010 to May 2015</b> I was a <b>research associate and teaching assistant</b> at Technische Universität Darmstadt, Germany.
+		       </li>
+		       <li>
+		       From <b>October 2007 to March 2008</b> I was a <b>software developer</b> working at MAN-Nutzfahrzeuge AG, München, Germany.
+		       </li>
+		       <li>
+		       From <b>June 2007 to September 2007</b> I was a <b>software developer</b> working at REA-Elektronik GmbH, Darmstadt, Germany.
+		       </li>
+		       <li>
+		       From <b>December 2002 to September 2003</b> I did my <b>civil service (Zivildienst)</b> at the Evangelisches Hospital für palliative Medizin, Frankfurt (Main), Germany.
+		       </li>	  
+		     </ul>
+		     </li>
+		     <li>
+		     <h4>[ Education ]</h4>
+		     <ul>
+		       <li>
+		       <b>December 2014</b>, <a href="http://tuprints.ulb.tu-darmstadt.de/4399/7/thesis-final-submission-ulb.pdf">PhD thesis</a>, supervised by <a href="http://www.es.tu-darmstadt.de/es/team/andy-schuerr/">Andy Schürr</a> at Technische Universität Darmstadt, Germany, with title <i>Synchronization of Models on Different Abstraction Levels using Triple Graph Grammars</i>, summa cum laude.
+		       </li>
+		       <li>
+		       From <b>April 2008 to April 2010</b> Master of Science, Computational Engineering, Technische Universität Darmstadt, Germany, Grade 1.0
+		       </li>
+		       <li>
+		       From <b>October 2003 to April 2007</b> Bachelor of Science, Computational Engineering, Technische Universität Darmstadt, Germany, Grade 1.7
+		       </li>
+		       <li>
+		       From <b>September 2001 to June 2002</b> Studienkolleg für ausländische Studierende, Mittel-Hessen, Germany, Feststellungsprüfung with Grade 1.0
+		       </li>
+		       <li>
+		       From <b>November 1994 to June 2000</b> King’s College Lagos, Nigeria, West African Senior School Certificate (WAEC).
+		       </li>
+		     </ul>
+		     </li>
+		   </ul>
 		  </p>
 		    <a href="#teaching" class="btn btn-outline
 		  btn-xl page-scroll">My Teaching Experience</a>
