Fixed small typo

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ I also try to be as <i>methodic</i> as possible, and have contributed to <i>syst
   <br />
   <small>A Software Campus project with TU Darmstadt as academic partner and Siemens AG as industrial partner.</small>
   <br />
-  <small>Jan 2013 - Dez 2013</small>
+  <small>Jan 2013 - Dec 2013</small>
   </li>
   
   <br/>
