Added pic from girls' day 2017

--- a/index.html
+++ b/index.html
@@ -494,6 +494,11 @@ btn-xl page-scroll">My Profile</a>
 		    <a href="https://www.uni-paderborn.de/universitaet/fgi/girlsday/">Girls' Day 2017</a>
 		     <br />
 		     <small>[ I organised a lecture and workshop: "Programmieren mit Kästchen und Strichen – Einblick in das Informatikstudium" ]</small>
+		     <br />
+		     <br />
+		     <p>
+		     <img class="img-responsive img-rounded" src="img/girlsday_2017.jpg" alt="Girls' Day 2017, Paderborn University" width="460"><h6>Photograph courtesy of Paderborn University, Girls' Day 2017.</h6>
+		     </p>
 		     </li>
 		     <br />
 		     <li>
@@ -503,7 +508,7 @@ btn-xl page-scroll">My Profile</a>
 		     <br />
 		     <br />
 		     <p>
-		     <img class="img-responsive img-rounded" src="img/herbstuni_2016.jpg" alt="Herbst-Uni 2016, Uni Paderborn" width="460"><h6>Photograph courtesy of Paderborn University, Herbst-Uni 2016.</h6>
+		     <img class="img-responsive img-rounded" src="img/herbstuni_2016.jpg" alt="Herbst-Uni 2016, Paderborn University" width="460"><h6>Photograph courtesy of Paderborn University, Herbst-Uni 2016.</h6>
 		     </p>
 		     </li>
 		   </ul>
