Added dblp link

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			  <br />
 			  <br />
 			  <a href="#contact" class="btn btn-outline
-		  btn-xl page-scroll">Get in Contact with Me</a>
+		  btn-xl page-scroll">Find Me / My Publications</a>
                         </div>
                     </div>
                 </div>
@@ -522,7 +522,7 @@ btn-xl page-scroll">My Profile</a>
     <section id="contact" class="contact bg-primary">
 	 <div class="container-fluid">
             <div class="row">
-	    <div class="col-md-2 col-xs-6 text-center">
+	    <div class="col-md-3 col-xs-6 text-center">
 	    <div class="service-box">
 	      <a href="http://www.emoflon.org">
 	      <img src="img/emoflon.png" alt="emoflon" style="width:128px;height:128px;">
@@ -530,7 +530,7 @@ btn-xl page-scroll">My Profile</a>
 	    </div>
 	    </div>
 
-	    <div class="col-md-2 col-xs-6 text-center">
+	    <div class="col-md-3 col-xs-6 text-center">
 	    <div class="service-box">
 	      <a href="https://scholar.google.ca/citations?user=jTNl4QYAAAAJ&hl=en">
 	      <img src="img/googlescholar.png" alt="google scholar" style="width:128px;height:128px;">
@@ -538,7 +538,15 @@ btn-xl page-scroll">My Profile</a>
 	    </div>
 	    </div>
 
-	    <div class="col-md-2 col-xs-6 text-center">
+	      <div class="col-md-3 col-xs-6 text-center">
+	    <div class="service-box">
+	      <a href="http://dblp2.uni-trier.de/pers/hd/a/Anjorin:Anthony">
+	      <img src="img/dblp.png" alt="dblp" style="width:128px;height:128px;">
+	      </a>
+	    </div>
+	    </div>
+
+	    <div class="col-md-3 col-xs-6 text-center">
 	    <div class="service-box">
 	      <a href="https://www.linkedin.com/in/anthony-anjorin-666b88111/">
 	      <img src="img/linkedin.png" alt="linkedin" style="width:128px;height:128px;">
@@ -547,7 +555,7 @@ btn-xl page-scroll">My Profile</a>
 	    </div>
 
 		
-	    <div class="col-md-2 col-xs-6 text-center">
+	    <div class="col-md-4 col-xs-6 text-center">
 	    <div class="service-box">
 	      <a href="http://www.researchgate.net/profile/Anthony_Anjorin">
 	      <img src="img/researchgate.png" alt="research gate" style="width:128px;height:128px;">
@@ -555,7 +563,7 @@ btn-xl page-scroll">My Profile</a>
 	    </div>
 	    </div>
 
-	    <div class="col-md-2 col-xs-6 text-center">
+	    <div class="col-md-4 col-xs-6 text-center">
 	    <div class="service-box">
 	      <a href="https://www.mendeley.com/profiles/tony-anjorin/">
 	      <img src="img/mendeley.png" alt="mendeley" style="width:128px;height:128px;">
@@ -563,7 +571,7 @@ btn-xl page-scroll">My Profile</a>
 	    </div>
 	    </div>
 	    
-	    <div class="col-md-2 col-xs-6 text-center">
+	    <div class="col-md-4 col-xs-6 text-center">
 	    <div class="service-box">
 	      <a href="https://www.xing.com/profile/Anthony_Anjorin">
 	      <img src="img/xing.png" alt="xing" style="width:128px;height:128px;">
