Corrected referenced paper

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ I also try to be as <i>methodic</i> as possible, and have contributed to <i>syst
   I worked on this research project during my time as a <a href="http://www.chalmers.se/en/staff/Pages/anjorin.aspx">post-doc at Chalmers (Gothenburg, Sweden)</a>.
   Results of my work included an analysis of the potential and feasibility of transitioning from informal requirements to more formal models in the embedded industry 
   (
-  <a href="http://tuprints.ulb.tu-darmstadt.de/4399/">
+  <a href="http://www.scitepress.org/DigitalLibrary/Link.aspx?doi=10.5220/0006205604270434">
   <i class="fa fa-file-text-o" aria-hidden="true"></i></a>
   ).
   <br />
