--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
 	    </li>
 	    <br />
 	    <li>Euromicro Conference on Software Engineering and Advanced Applications
-	    x(<a href="http://dsd-seaa2018.fit.cvut.cz/seaa/index.php?sec=main#page_header">SEAA 2018</a>)
+	    (<a href="http://dsd-seaa2018.fit.cvut.cz/seaa/index.php?sec=main#page_header">SEAA 2018</a>)
 	    <br />
 	    <small>[ Programme committee member ]</small>
 	    </li>
