Latest academic service updates

--- a/index.html
+++ b/index.html
@@ -424,13 +424,56 @@
 	  <h3>Workshops, Conferences, Seminars, and Journals</h3>
 	  <p>
 	  <ul>
+	     <li>Euromicro Conference on Software Engineering and
+	  Advanced Applications, Track on Model-Driven Engineering and Modeling
+	  Languages  (<a href="http://dsd-seaa2019.csd.auth.gr/seaa/indexMDEML.html?sec=track_mdeml#page_header">SEAA, MDEML 2019</a>)
+	    <br />
+	    <small>[ Programme committee member ]</small>
+	    </li>
+	    <br />
+	     <li>11th Workshop on Modelling in Software Engineering  (<a href="https://sselab.de/lab2/public/wiki/MiSE/index.php?title=Main_Page">MiSE 2019</a>)
+	    <br />
+	    <small>[ Programme committee member ]</small>
+	    </li>
+	    <br />
+	     <li>10th International Workshop on Graph Computation Models (<a href="http://gcm2019.imag.fr">GCM 2019</a>)
+	    <br />
+	    <small>[ Programme committee member ]</small>
+	    </li>
+	    <br />
+	     <li>11th International Workshop on Theory and Practice of Provenance (<a href="https://www.usenix.org/conference/tapp2019">TaPP 2019</a>)
+	    <br />
+	    <small>[ Programme committee member ]</small>
+	    </li>
+	    <br />
+	     <li>13th Models and Evolution Workshop (<a href="http://www.models-and-evolution.com/2019/">ME 2019</a>)
+	    <br />
+	    <small>[ Programme committee member ]</small>
+	    </li>
+	    <br />
+	    <li>
+	    15th European Conference on Modelling Foundations and Applications (<a href="https://staf2019.win.tue.nl/events/ecmfa19/">ECMFA 2019</a>)
+	    <br />
+	    <small>[ Programme committee member for the foundations track ]</small>
+	    </li>
+	    <br />
+	     <li>12th International Conference on Model Transformation (<a href="https://staf2019.win.tue.nl/events/icmt19/">ICMT 2019</a>)
+	    <br />
+	    <small>[ Co-chair with Regina Hebig ]</small>
+	    </li>
+	    <br />
+	     <li>12th International Conference on Graph Transformation (<a href="https://sites.google.com/site/icgt2019/home">ICGT 2019</a>)
+	    <br />
+	    <small>[ Programme committee member ]</small>
+	    </li>
+	    <br />
 	    <li>
 	    Journal of Software and Systems Modelling (<a href="http://www.sosym.org">SoSym </a>)
 	    <br />
 	    <small>[ Reviewer in 2018 ]</small>
 	    </li>
 	    <br />
-	    <li>Models and Evolution Workshop (<a href="http://www.models-and-evolution.com/2018/index.html">ME 2018</a>)
+	    <li>12th Models and Evolution Workshop (<a href="http://www.models-and-evolution.com/2018/index.html">ME 2018</a>)
 	    <br />
 	    <small>[ Programme committee member ]</small>
 	    </li>
