Latest updates from 2019

--- a/index.html
+++ b/index.html
@@ -424,6 +424,23 @@
 	  <h3>Workshops, Conferences, Seminars, and Journals</h3>
 	  <p>
 	  <ul>
+	    <li>
+	    <a href="https://www.journals.elsevier.com/journal-of-logical-and-algebraic-methods-in-programming">Journal of Logical and Algebraic Methods in Programming</a>
+	    <br />
+	    <small>[ Reviewer in 2019 ]</small>
+	    </li>
+	    <br />
+	    <li>
+	    Journal of Software and Systems Modelling (<a href="http://www.sosym.org">SoSym </a>)
+	    <br />
+	    <small>[ Reviewer in 2019 ]</small>
+	    </li>
+	    <br />
+	     <li>41st ACME/IEEE International Conference on Software Engineering, Poster-Track (<a href="https://2019.icse-conferences.org/track/icse-2019-Posters">ICSE 2019 Posters</a>)
+	    <br />
+	    <small>[ Programme committee member ]</small>
+	    </li>
+	    <br />
 	     <li>Euromicro Conference on Software Engineering and
 	  Advanced Applications, Track on Model-Driven Engineering and Modeling
 	  Languages  (<a href="http://dsd-seaa2019.csd.auth.gr/seaa/indexMDEML.html?sec=track_mdeml#page_header">SEAA, MDEML 2019</a>)
@@ -465,6 +482,12 @@
 	     <li>12th International Conference on Graph Transformation (<a href="https://sites.google.com/site/icgt2019/home">ICGT 2019</a>)
 	    <br />
 	    <small>[ Programme committee member ]</small>
+	    </li>
+	    <br />
+	    <li>
+	    <a href="https://link.springer.com/journal/165">Journal of Formal Aspects of Computing</a>
+	    <br />
+	    <small>[ Reviewer in 2018 ]</small>
 	    </li>
 	    <br />
 	    <li>
@@ -554,7 +577,7 @@
 	    </li>
 	    <br />
 	    <li>
-	    Fifth International Workshop on Bidirectional Transformations (<a href="http://bx-community.wikidot.com/bx2016:home">BX 2016</a>)
+	    5th International Workshop on Bidirectional Transformations (<a href="http://bx-community.wikidot.com/bx2016:home">BX 2016</a>)
 	    <br />
 	    <small>[ Co-chair with Jeremy Gibbons ]</small>
 	    </li>
@@ -604,10 +627,20 @@
 	  </ul>  
 	  </p>
 	  
-	  <h3>Invited Talks and Lectures</h3>
+	  <h3>Awards, Invited Talks and Lectures</h3>
 	  
 	  <p>
 	  <ul>
+	     <li>
+	    <a href="https://cs.uni-paderborn.de/ddi/forschung/pin-lab/symposium2018/">PIN-Lab Symposium</a> 30.11.2018, Paderborn University
+	    <br />
+	    <small>[ Invited Speaker ]</small>
+	    </li>
+	    <br />
+	    <li>
+	    Best Reviewer Award for 2018,  Journal of Software and Systems Modelling (<a href="http://www.sosym.org">SoSym </a>)
+	    </li>
+	    <br />
 	    <li>
 	    Summer School on Bidirectional Transformations (<a href="https://www.cs.ox.ac.uk/projects/tlcbx/ssbx/">SSBX</a>) held from 25th to 29th July, 2016 
 	    <br />
@@ -625,6 +658,14 @@
 	  <h3>Miscellaneous (or just for fun)</h3>
 	  <p>
 	  <ul>
+	     </li>
+	    <br />
+	    <li>
+	    <a href="https://www.uni-paderborn.de/universitaet/fgi/fruehlings-uni/">Frühlings-Uni 2019</a> 
+	    <br />
+	    <small>[ Based on collected feedback, my lecture "Programmieren mit Kästchen und Strichen" was selected as one of the best four lectures of the Frühlings-Uni 2019 ]</small>
+	     <br />
+	     <br />
 	    <li>
 	    <a href="https://www.uni-paderborn.de/universitaet/fgi/girlsday/">Girls' Day 2017</a>
 	    <br />
