Updated to position at IAV

--- a/index.html
+++ b/index.html
@@ -80,9 +80,8 @@
                     <div class="header-content">
                         <div class="header-content-inner">
 			  <h2>
-			  My name is Tony Anjorin, and I'm currently a junior professor for
-			  model-based software development at the
-			  computer science department of Paderborn University, Germany.
+			  My name is Tony Anjorin, and I'm currently a research and development engineer at IAV - Automotive Engineering, Germany.
+			  I was an active researcher in the domain of model-driven engineering for about 10 years; this website is mostly based on my research activities from this time.
 			  </h2>
                             <a href="#research" class="btn btn-outline btn-xl page-scroll">My Research Interests</a>
 			  <br />
@@ -292,7 +291,10 @@
 		<h4>[ Work Experience ]</h4>
 		<ul>
 		  <li>
-		  As from <b>April 2016</b> I have been a <b>junior professor</b> at Paderborn University, Germany.
+		  As from <b>January 2020</b> I have been working as a <b>research and development engineer</b> at IAV - Automotive Engineering, Germany.
+		  </li>
+		  <li>
+		  From <b>April 2016 to December 2019</b> I was a <b>junior professor</b> at Paderborn University, Germany.
 		  </li>
 		  <li>
 		  From <b>June 2015 to February 2016</b> I was a <b>post-doc</b> at Chalmers | University of Gothenburg, Sweden.
@@ -364,7 +366,7 @@
 	    they make you realise how rich the solution space is and how easily an inexperienced programmer could mess things up.
 	    To get students hooked on bx research and interested in the general area, a student of mine has recently built a fancy bx demonstrator called
 	    <i>demon-bx</i> (pronounced /demon-box/).  I have used this engaging tool as part of the exercise for a university course as well as for a Girls' Day workshop.
-	    It is web-based (zero installation or setup) and is <a href="http://bxtransform.cs.upb.de:8080/Client/GUI.html">available</a> online.  
+	    It is web-based (zero installation or setup) and its source code is available from this GitHub <a href="https://github.com/eMoflon/demon-bx">repository</a>.  
 	    </li>
 	    <br />
 	    <li>
