Added switch to Zühlke.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                     <div class="header-content">
                         <div class="header-content-inner">
 			  <h2>
-			  My name is Tony Anjorin, and I'm currently a research and development engineer at IAV - Automotive Engineering, Germany.
+			  My name is Tony Anjorin, and I'm currently a lead software architect at Zühlke Engineering, Germany. 
+			  I used to be a research and development engineer at IAV - Automotive Engineering, Germany.
 			  I was an active researcher in the domain of model-driven engineering for about 10 years; this website is mostly based on my research activities from this time.
 			  </h2>
                             <a href="#research" class="btn btn-outline btn-xl page-scroll">My Research Interests</a>
