--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
 	  <p>
 	  <ul>
 	    <li>
-	    Interview on podcast <a href="https://link.springer.com/article/10.1007/s10270-019-00752-x">Scholarly Communication</a> about writing <a href="https://newbooksnetwork.com/get-team-science-working-for-your-publication-outcomes">Benchmarking bidirectional transformations: Theory, implementation, application, and assessment (Software and Systems Modeling)</a>, 2024
+	    Interview on podcast <a href="https://newbooksnetwork.com/get-team-science-working-for-your-publication-outcomes">Scholarly Communication</a> about writing <a href="https://link.springer.com/article/10.1007/s10270-019-00752-x">Benchmarking bidirectional transformations: Theory, implementation, application, and assessment (Software and Systems Modeling)</a>, 2024
 	    <br />
 	    <small>[ Invited Speaker ]</small>
 	    </li>
